Alignment fix

--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -62,12 +62,19 @@ body {
     padding: 5%;
     form {
       .form-group {
-        padding: 3%;
-        margin-bottom: 20px;
+        padding: 4%;
+        margin: 20px auto;
       }
       label {
         font-size: 1.2rem;
         padding: 1%;
+      }
+      #username{
+        padding-right: 15px;
+      }
+      .form-control{
+        padding-top: 12px;
+        padding-bottom: 12px;
       }
       input:focus {
         display: inline;
@@ -90,6 +97,7 @@ body {
         outline: none;
         text-align: center;
         font-size: 20px;
+        margin-left: 10px;
         transition: all 1s ease-in-out 0s;
       }
       select {
@@ -145,6 +153,7 @@ body::before {
   transition: all 1s ease-in-out 0.5s;
 }
 #joinChat {
+  margin-top: 10px;
   transition: all 1s ease 0s;
 }
 .form-group {
@@ -183,7 +192,7 @@ body::before {
 .profile {
   width: 124px;
   height: 124px;
-  margin: 0 auto;
+  margin: 30px auto;
   border-radius: 50%;
   img {
     width: 120px;
@@ -444,13 +453,19 @@ i.fa.fa-check.icon_check.hidden1{
           justify-content: center;
           align-items: center;
         }
-
+        #username{
+          padding: 2.5px;
+          text-align: center;
+        }
         input:focus {
           width: 85%;
         }
 
         input {
           width: 85%;
+          margin: 0;
+          padding: 0;
+          text-align: center;
         }
         select {
           width: 85%;
